# mlog

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/src/: main.cc
logger/: CMakeLists.txt
logger/include/logger/: date_folder_rotating_sink.h  log_manager.h  module_logger.h
logger/src/: log_manager.cc  module_logger.cc
